# githttpserver

./: .dockerignore  .gitpod.yml  .travis.yml  Dockerfile  README.md  demo_webworker.js  githttpserver.js  githttpserver.yaml  index.html  karma.conf.cjs  main.js  package-lock.json  package.json  test.sh
.devcontainer/: devcontainer.json  post-create.sh
.github/workflows/: main.yml
nearboswidget/: widget.jsx
nearcontract/: .gitignore  Cargo.toml  README.md  acl.wasm  buildanddeploy.sh  createinvitationsignature.js
nearcontract/src/: lib.rs
nearcontract/tests/: migration.rs  test_env.rs
public/: demo_webworker.js  index.html  libgit2_webworker.js  libgit2_webworker.spec.js  main.js  modal.js  ui.js
server/: checkpermission.js  checkpermission.spec.js  githttpserver.js  quota.js  quota.spec.js
