[package]
name = "rust-simple-access-control"
version = "0.1.0"
authors = ["Peter Salomonsen <contact@petersalomonsen.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "2.0.1"
wee_alloc = "0.4.5"
ed25519-dalek = "2.0.0"
byteorder= "1.4.2"

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
