[package]
name = "rust-simple-access-control"
version = "0.1.0"
authors = ["Peter Salomonsen <contact@petersalomonsen.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wee_alloc = "0.4.5"
byteorder= "1.4.2"
near-sdk = "4.1.1"
ed25519-dalek = "1.0.1"

[dev-dependencies]
near-workspaces = { version = "0.9.0", features = ["unstable"]  }

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
